--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -10,6 +10,8 @@ header{
     top:0;
     left:0;
     z-index: 1;
+    display:flex;
+    justify-content:space-evenly;
     background-color: #FFADAD;
 }
 section{
@@ -18,7 +20,6 @@ section{
     position:relative;
     top:180px;
     background-color: bisque;
-    border: 5px solid black;
 }
 footer{
     height: auto;
@@ -29,8 +30,6 @@ footer{
 }
 ul{
     background-color: aqua;
-    display:flex;
-    justify-content: space-between;
 }
 
 
